# GPTSoVits-ONNX-Cpp

./: CMakeLists.txt  README.md  main.cpp
assets/: get_embedding_fp32_models.py
assets/Text/: JapaneseG2P.py  SymbolsV2.py
include/: GPTSoVits.h  JapaneseG2P.h  Symbols.h
src/: GPTSoVits.cpp  JapaneseG2P.cpp
